@@ -268,7 +268,7 @@ public class StgSimulationTool extends PetriSimulationTool {
         @Override
         protected Transferable createTransferable(final JComponent c) {
             assert c == table;
-            return new DataHandler(new Integer(table.getSelectedRow()), localObjectFlavor.getMimeType());
+            return new DataHandler(Integer.valueOf(table.getSelectedRow()), localObjectFlavor.getMimeType());
         }
 
         @Override
